--- a/app/src/main/res/layout/grid_item_movie.xml
+++ b/app/src/main/res/layout/grid_item_movie.xml
@@ -6,6 +6,7 @@
     android:id="@+id/grid_item_movie_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:adjustViewBounds="true" />
+    android:adjustViewBounds="true"
+    android:clickable="true" />
 
 </FrameLayout>
