--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,14 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".MovieFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/gridview_movie"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:numColumns="2">
+        android:layout_height="wrap_content">
     </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
