--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -4,44 +4,78 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".MovieDetailFragment">
+        tools:context=".MovieDetailFragment"
+        android:orientation="vertical"
+        android:padding="10dp">
 
-        <TextView
-            android:id="@+id/detail_title"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/abc_text_size_display_1_material"
-            android:textStyle="bold"/>
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/detail_release_date"
-            android:layout_width = "match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/detail_title"
-            android:gravity="end"/>
+            <ImageView
+                android:id="@+id/detail_poster"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true" />
 
-        <ImageView
-            android:id="@+id/detail_poster"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_below="@+id/detail_release_date" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingLeft="10dp">
 
-        <TextView
-            android:id="@+id/detail_vote_average"
+                <TextView
+                    android:id="@+id/detail_vote_average"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Mark as favorite"
+                    android:background="@color/colorAccent"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="120 min"/>
+
+                <TextView
+                    android:id="@+id/detail_release_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/detail_poster"
-            android:gravity="end"/>
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/detail_overview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/detail_vote_average" />
+            <TextView
+                android:id="@+id/detail_overview"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"/>
 
-    </RelativeLayout>
+            <TextView
+                android:text="Trailers"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:text="Review"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+
+        </LinearLayout>
+
+
+    </LinearLayout>
 </ScrollView>
