--- a/app/src/main/res/layout/grid_item_movie.xml
+++ b/app/src/main/res/layout/grid_item_movie.xml
@@ -1,12 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
-
-<ImageView
-    android:id="@+id/grid_item_movie_view"
-    android:layout_width="match_parent"
-    android:layout_height="fill_parent"
-    android:scaleType="fitXY"
-    android:adjustViewBounds="true"
-    android:clickable="true"/>
+    <ImageView
+        android:id="@+id/movie_image"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
+        android:clickable="true"/>
 </FrameLayout>
