--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<GridView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/gridview_movies"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context=".MovieFragment">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/gridview_movie"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </android.support.v7.widget.RecyclerView>
-
-</RelativeLayout>
+    android:layout_height="match_parent"
+    android:numColumns="auto_fit"
+    android:columnWidth="@dimen/grid_item_movie_width"
+    android:drawSelectorOnTop="true" />
