--- a/app/src/main/res/menu/detail.xml
+++ b/app/src/main/res/menu/detail.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <!-- "Mark Favorite", should appear as action button if possible -->
+    <item
+        android:id="@+id/action_favorite"
+        android:icon="@drawable/ic_favorite_border_white_48dp"
+        android:title="@string/action_favorite"
+        app:showAsAction="ifRoom"/>
+
 
 </menu>
