--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -11,4 +11,9 @@
         <item>@string/pref_sort_rating</item>
     </string-array>
 
+    <string-array name="sortby_array">
+        <item>Most Popular</item>
+        <item>Top Rated</item>
+        <item>Favorite</item>
+    </string-array>
 </resources>
