--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -8,10 +8,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
-    <item android:id="@+id/spinner"
-        android:actionViewClass="android.widget.Spinner"
-        android:title="@string/sort_by"
-        android:visible="true"
-        app:showAsAction="always"/>
+    <item
+        android:id="@+id/spinner_sortby"
+        android:title="@string/sortby_spinner"
+        app:actionViewClass="android.widget.Spinner"
+        app:showAsAction="ifRoom" />
 
 </menu>
