--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,15 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MovieGridActivity">
 
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
-
     <item
         android:id="@+id/spinner_sortby"
         android:title="@string/sortby_spinner"
         app:actionViewClass="android.widget.Spinner"
         app:showAsAction="ifRoom" />
 
+    <item android:id="@+id/action_refresh"
+          android:title="@string/action_refresh"
+          app:showAsAction="never" />
 </menu>
