--- a/app/src/main/res/menu/detail.xml
+++ b/app/src/main/res/menu/detail.xml
@@ -9,5 +9,10 @@
         android:title="@string/action_favorite"
         app:showAsAction="ifRoom"/>
 
-
+    <item android:id="@+id/action_share"
+          android:title="@string/action_share"
+          app:showAsAction="ifRoom"
+          app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
+          android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
+          app:icon="@drawable/abc_ic_menu_share_mtrl_alpha" />
 </menu>
