--- a/app/src/main/res/menu/detail.xml
+++ b/app/src/main/res/menu/detail.xml
@@ -1,4 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  Copyright 2016.  Julia Kozhukhovskaya
+
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+-->
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -7,11 +22,11 @@
         android:id="@+id/action_favorite"
         android:icon="@drawable/ic_favorite_border_white_48dp"
         android:title="@string/action_favorite"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"/>
 
     <item android:id="@+id/action_share"
           android:title="@string/action_share"
-          app:showAsAction="ifRoom"
+          app:showAsAction="always"
           app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
           android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
           app:icon="@drawable/abc_ic_menu_share_mtrl_alpha" />
