Add update fragment onResume

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -23,7 +23,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".DetailFragment"
+        tools:context=".details.DetailFragment"
         android:orientation="vertical"
         android:padding="10dp">
 
