Add ratingBar stars

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -19,10 +19,12 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MovieGridActivity">
 
     <item
+        android:theme="@style/Spinner"
         android:id="@+id/spinner_sortby"
         android:title="@string/sortby_spinner"
         app:actionViewClass="android.widget.Spinner"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom"
+        android:background="@color/colorPrimary"/>
 
     <item android:id="@+id/action_refresh"
           android:title="@string/action_refresh"
