--- a/app/src/main/res/layout/item_movie_trailer.xml
+++ b/app/src/main/res/layout/item_movie_trailer.xml
@@ -15,18 +15,16 @@
   ~ limitations under the License.
   -->
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical"
+              android:layout_width="wrap_content"
+              android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/trailer_image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+<ImageView
+    android:id="@+id/trailer_image"
+    android:layout_width="match_parent"
+    android:layout_height="fill_parent"
+    android:adjustViewBounds="true"
+    android:paddingRight="20dp"/>
 
-    <TextView
-        android:id="@+id/trailer_name"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-</FrameLayout>
+</LinearLayout>
