--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -101,9 +101,9 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/detail_trailers"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-
-                />
+                android:layout_height="150dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp" />
 
             <TextView
                 android:text="@string/review"
