--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -105,10 +105,11 @@
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp" />
 
-            <TextView
-                android:text="@string/review"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/detail_reviews"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+
 
         </LinearLayout>
 
