--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -26,6 +26,13 @@
         tools:context=".details.DetailFragment"
         android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/detail_backdrop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -35,13 +42,15 @@
                 android:id="@+id/detail_poster"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
-                android:adjustViewBounds="true" />
+                android:adjustViewBounds="true"
+                android:padding="10dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingLeft="10dp">
+                android:paddingLeft="10dp"
+                android:paddingTop="10dp">
 
                 <TextView
                     android:id="@+id/detail_title"
@@ -75,11 +84,6 @@
                 </LinearLayout>
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="@string/_120_min"/>
-
-                <TextView
                     android:id="@+id/detail_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
@@ -96,23 +100,30 @@
                 android:id="@+id/detail_plot"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:paddingBottom="20dp"/>
+                android:padding="10dp"/>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/detail_trailers"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:paddingLeft="5dp"
-                android:paddingRight="5dp" />
+                android:paddingRight="5dp"
+                android:paddingBottom="10dp"/>
+
+            <TextView
+                android:id="@+id/detail_reviews_title"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:textSize="20sp"
+                android:text="@string/reviews"
+                android:padding="10dp"/>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/detail_reviews"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
+                android:layout_height="wrap_content"
+                android:paddingBottom="10dp"/>
 
         </LinearLayout>
-
-
     </LinearLayout>
 </ScrollView>
