--- a/app/src/main/res/layout/item_movie_trailer.xml
+++ b/app/src/main/res/layout/item_movie_trailer.xml
@@ -17,19 +17,21 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
-             android:layout_height="wrap_content">
+             android:layout_height="wrap_content" >
 
     <ImageView
         android:id="@+id/trailer_image"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:adjustViewBounds="true"
-        android:paddingRight="5dp"
-        android:paddingLeft="5dp" />
+        android:layout_margin="5dp" />
 
-    <ImageView  android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:src="@drawable/ic_play_circle_outline_white_48dp"
-                android:id="@+id/imagePlayIcon"
-                android:layout_gravity="center"/>
+    <ImageView
+        android:id="@+id/image_play_icon"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:src="@drawable/ic_play_arrow_white_48dp"
+        android:layout_gravity="center"
+        android:alpha=".9"
+       />
 </FrameLayout>
