--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -24,7 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:context=".details.DetailFragment"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="#f5f5f5">
 
         <ImageView
             android:id="@+id/detail_backdrop"
@@ -36,7 +37,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            >
 
             <ImageView
                 android:id="@+id/detail_poster"
@@ -94,7 +96,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="20dp">
 
             <TextView
                 android:id="@+id/detail_plot"
@@ -102,13 +105,28 @@
                 android:layout_width="match_parent"
                 android:padding="10dp"/>
 
+            <RelativeLayout
+                android:id="@+id/film_reel_top"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background"
+                android:visibility="gone"/>
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/detail_trailers"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="wrap_content"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
-                android:paddingBottom="10dp"/>
+                android:background="#222"
+                android:visibility="gone"/>
+
+            <RelativeLayout
+                android:id="@+id/film_reel_bottom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background"
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/detail_reviews_title"
@@ -116,13 +134,16 @@
                 android:layout_width="match_parent"
                 android:textSize="20sp"
                 android:text="@string/reviews"
-                android:padding="10dp"/>
+                android:padding="10dp"
+                android:background="#f5f5f5"
+                android:visibility="gone"/>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/detail_reviews"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="10dp"/>
+                android:layout_height="match_parent"
+                android:background="#f5f5f5"
+                android:visibility="gone"/>
 
         </LinearLayout>
     </LinearLayout>
