Add icon play in a backdrop and play the first trailer onclick

--- a/app/src/main/res/layout/item_movie_trailer.xml
+++ b/app/src/main/res/layout/item_movie_trailer.xml
@@ -24,14 +24,16 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:adjustViewBounds="true"
-        android:layout_margin="5dp" />
+        android:layout_margin="5dp"
+        android:contentDescription="@string/image_for_trailer" />
 
     <ImageView
         android:id="@+id/image_play_icon"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:src="@drawable/ic_play_arrow_white_48dp"
         android:layout_gravity="center"
         android:alpha=".9"
-       />
+        android:contentDescription="@string/play_icon" />
+
 </FrameLayout>
