--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -14,6 +14,7 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
+
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
@@ -27,25 +28,42 @@
         android:orientation="vertical"
         android:background="#f5f5f5">
 
-        <ImageView
-            android:id="@+id/detail_backdrop"
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:scaleType="fitXY"/>
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/detail_backdrop"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"
+                android:contentDescription="@string/image_for_backdrop" />
+
+            <ImageView
+                android:id="@+id/image_play_icon_backdrop"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/ic_play_arrow_white_48dp"
+                android:layout_gravity="center"
+                android:alpha=".9"
+                android:visibility="gone"
+                android:contentDescription="@string/play_icon_for_backdrop" />
+
+        </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/detail_poster"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:padding="10dp" />
+                android:padding="10dp"
+                android:contentDescription="@string/image_for_poster" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -74,14 +92,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:isIndicator="false"
-                        android:layout_marginTop="2dp"/>
+                        android:layout_marginTop="2dp" />
 
                     <TextView
                         android:id="@+id/detail_rating"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:paddingLeft="5dp"
-                        />
+                        android:paddingLeft="5dp" />
 
                 </LinearLayout>
 
@@ -91,6 +108,7 @@
                     android:layout_height="wrap_content" />
 
             </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
@@ -103,30 +121,28 @@
                 android:id="@+id/detail_plot"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:padding="10dp"/>
+                android:padding="10dp" />
 
             <RelativeLayout
                 android:id="@+id/film_reel_top"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/background"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/detail_trailers"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
                 android:background="#222"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <RelativeLayout
                 android:id="@+id/film_reel_bottom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/background"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/detail_reviews_title"
@@ -136,14 +152,14 @@
                 android:text="@string/reviews"
                 android:padding="10dp"
                 android:background="#f5f5f5"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/detail_reviews"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#f5f5f5"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
         </LinearLayout>
     </LinearLayout>
