--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -210,13 +210,14 @@
                 android:visibility="gone"
                 android:textColor="@color/colorAccent"/>
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/detail_reviews"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#f5f5f5"
-                android:visibility="gone" />
-
         </LinearLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical"
+            android:id="@+id/detail_reviews"
+            android:visibility="gone"/>
+
     </LinearLayout>
 </ScrollView>
