--- a/app/src/main/res/layout/item_review_list.xml
+++ b/app/src/main/res/layout/item_review_list.xml
@@ -53,7 +53,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="...view all"
+                    android:text="@string/view_all"
                     android:textColor="@color/colorAccent"/>
 
             </LinearLayout>
