--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -15,212 +15,246 @@
   limitations under the License.
 -->
 
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:id="@+id/detail_layout">
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/detail_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:context=".details.DetailFragment"
-        android:orientation="vertical"
-        android:background="#f5f5f5">
+        android:layout_height="@dimen/detail_backdrop_height"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:fitsSystemWindows="true">
 
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleMarginStart="48dp"
+            app:expandedTitleMarginEnd="64dp">
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent">
 
                 <ImageView
-                        android:id="@+id/detail_backdrop"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:adjustViewBounds="true"
-                        android:scaleType="fitXY"
-                        android:contentDescription="@string/image_for_backdrop" />
-
-                <ImageView
+                    android:id="@+id/detail_backdrop"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/darker_gradient_background"
+                    android:scaleType="centerCrop"
+                    android:fitsSystemWindows="true"
+                    app:layout_collapseMode="parallax"
+                    android:contentDescription="@null"/>
+
+                <ImageView
+                    android:id="@+id/image_play_icon_backdrop"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:src="@drawable/ic_play_arrow_white_48dp"
+                    android:layout_gravity="center"
+                    android:alpha=".9"
+                    android:visibility="gone"
                     android:contentDescription="@null" />
 
             </FrameLayout>
 
-            <ImageView
-                android:id="@+id/image_play_icon_backdrop"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:src="@drawable/ic_play_arrow_white_48dp"
-                android:layout_gravity="center"
-                android:alpha=".9"
-                android:visibility="gone"
-                android:contentDescription="@string/play_icon_for_backdrop" />
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:layout_collapseMode="pin" />
 
-        </FrameLayout>
+        </android.support.design.widget.CollapsingToolbarLayout>
 
-        <LinearLayout
+    </android.support.design.widget.AppBarLayout>
+
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/detail_poster"
-                android:layout_width="170dp"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:paddingLeft="12dp"
-                android:paddingTop="20dp"
-                android:contentDescription="@string/image_for_poster" />
+            tools:context=".details.DetailFragment"
+            android:orientation="vertical"
+            android:background="#f5f5f5">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingLeft="12dp">
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/detail_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:paddingTop="30dp"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="20sp"
-                    android:textStyle="bold"/>
-
-                <TextView
-                    android:id="@+id/detail_genres"
-                    android:layout_width="match_parent"
+                <ImageView
+                    android:id="@+id/detail_poster"
+                    android:layout_width="170dp"
                     android:layout_height="wrap_content"
-                    android:paddingTop="10dp"
-                    android:paddingRight="5dp"/>
+                    android:adjustViewBounds="true"
+                    android:paddingLeft="12dp"
+                    android:paddingTop="20dp"
+                    android:contentDescription="@string/image_for_poster" />
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical"
-                    android:paddingTop="10dp">
-
-                    <RatingBar
-                        android:id="@+id/rating_bar"
-                        style="?android:attr/ratingBarStyleSmall"
-                        android:theme="@style/RatingBar"
-                        android:numStars="5"
-                        android:stepSize="0.1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:isIndicator="false"
-                        android:layout_marginTop="2dp" />
+                    android:orientation="vertical"
+                    android:paddingLeft="12dp">
 
                     <TextView
-                        android:id="@+id/detail_rating"
+                        android:id="@+id/detail_title"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:paddingLeft="5dp"
-                        android:textColor="#999"/>
+                        android:paddingTop="30dp"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="20sp"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:id="@+id/detail_genres"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="10dp"
+                        android:paddingRight="5dp"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical"
+                        android:paddingTop="10dp">
+
+                        <RatingBar
+                            android:id="@+id/rating_bar"
+                            style="?android:attr/ratingBarStyleSmall"
+                            android:numStars="5"
+                            android:stepSize="0.1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:isIndicator="false"
+                            android:layout_marginTop="2dp" />
+
+                        <TextView
+                            android:id="@+id/detail_rating"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:paddingLeft="5dp"
+                            android:textColor="#999"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:paddingTop="10dp">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/runtime"
+                            android:paddingRight="5dp"
+                            android:textColor="#999"/>
+
+                        <TextView
+                            android:id="@+id/detail_runtime"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/detail_date"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="10dp"/>
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingBottom="20dp">
+
+                <TextView
+                    android:id="@+id/detail_plot"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:padding="12dp" />
+
+                <LinearLayout
+                    android:id="@+id/trailers_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:orientation="vertical"
+                    android:paddingBottom="20dp"
                     android:paddingTop="10dp">
 
-                    <TextView
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/runtime"
-                        android:paddingRight="5dp"
-                        android:textColor="#999"/>
+                        android:background="@drawable/background" />
 
-                    <TextView
-                        android:id="@+id/detail_runtime"
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/detail_trailers"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:background="#222" />
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/background"
+                       />
 
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/detail_date"
-                    android:layout_width="match_parent"
+                    android:id="@+id/detail_reviews_title"
                     android:layout_height="wrap_content"
-                    android:paddingTop="10dp"/>
-
-
+                    android:layout_width="match_parent"
+                    android:textSize="20sp"
+                    android:text="@string/reviews"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:paddingLeft="30dp"
+                    android:background="#f5f5f5"
+                    android:textColor="@color/colorAccent"/>
 
             </LinearLayout>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingBottom="20dp">
-
-            <TextView
-                android:id="@+id/detail_plot"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:padding="12dp" />
-
-            <LinearLayout
-                android:id="@+id/trailers_view"
+            <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:scrollbars="vertical"
+                android:id="@+id/detail_reviews"
                 android:visibility="gone"
-                android:orientation="vertical"
-                android:paddingBottom="20dp"
-                android:paddingTop="10dp">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/background" />
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/detail_trailers"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#222" />
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/background"
-                   />
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/detail_reviews_title"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:textSize="20sp"
-                android:text="@string/reviews"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:paddingLeft="30dp"
-                android:background="#f5f5f5"
-                android:textColor="@color/colorAccent"/>
-
+                android:paddingBottom="20dp"/>
         </LinearLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scrollbars="vertical"
-            android:id="@+id/detail_reviews"
-            android:visibility="gone"
-            android:paddingBottom="20dp"/>
+    </android.support.v4.widget.NestedScrollView>
 
-    </LinearLayout>
-</ScrollView>
+    <android.support.design.widget.FloatingActionButton
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        app:layout_anchor="@id/appbar"
+        app:layout_anchorGravity="bottom|right|end"
+        android:src="@drawable/ic_favorite_border_white_48dp"
+        android:layout_margin="@dimen/fab_margin"
+        android:clickable="true"/>
+
+</android.support.design.widget.CoordinatorLayout>
