--- a/app/src/main/res/menu/detail.xml
+++ b/app/src/main/res/menu/detail.xml
@@ -17,17 +17,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- "Mark Favorite", should appear as action button if possible -->
     <item
         android:id="@+id/action_favorite"
         android:icon="@drawable/ic_favorite_border_white_48dp"
         android:title="@string/action_favorite"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
 
     <item android:id="@+id/action_share"
           android:title="@string/action_share"
           app:showAsAction="always"
           app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
-          android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
-          app:icon="@drawable/abc_ic_menu_share_mtrl_alpha" />
+          android:icon="@drawable/abc_ic_menu_share_mtrl_alpha" />
+
+    <item android:id="@+id/action_refresh"
+        android:title="@string/action_refresh"
+        app:showAsAction="never" />
 </menu>
