--- a/app/src/main/res/layout/item_movie_trailer.xml
+++ b/app/src/main/res/layout/item_movie_trailer.xml
@@ -25,7 +25,7 @@
         android:layout_height="150dp"
         android:adjustViewBounds="true"
         android:layout_margin="5dp"
-        android:contentDescription="@string/image_for_trailer" />
+        android:contentDescription="@null" />
 
     <ImageView
         android:id="@+id/image_play_icon"
@@ -34,6 +34,6 @@
         android:src="@drawable/ic_play_arrow_white_48dp"
         android:layout_gravity="center"
         android:alpha=".9"
-        android:contentDescription="@string/play_icon" />
+        android:contentDescription="@null" />
 
 </FrameLayout>
