--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -22,152 +22,151 @@
     android:layout_height="wrap_content"
     tools:context=".details.DetailFragment"
     android:orientation="vertical"
-    android:background="#f5f5f5">
+    android:background="@color/colorBackgroundDetail">
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/detail_poster"
+            android:layout_width="@dimen/width_poster"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:paddingLeft="@dimen/padding_left_poster"
+            android:paddingTop="@dimen/padding_top_poster"
+            android:contentDescription="@null" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/padding_left_movie_info">
+
+            <TextView
+                android:id="@+id/detail_title"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingTop="@dimen/padding_top_title"
+                android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/text_sz_title"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/detail_genres"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:paddingTop="@dimen/padding_top_genres"
+                android:paddingRight="@dimen/padding_right_genres"/>
 
-                <ImageView
-                    android:id="@+id/detail_poster"
-                    android:layout_width="170dp"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:paddingTop="@dimen/padding_left_movie_info">
+
+                <RatingBar
+                    android:id="@+id/rating_bar"
+                    style="?android:attr/ratingBarStyleSmall"
+                    android:numStars="5"
+                    android:stepSize="0.1"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:paddingLeft="12dp"
-                    android:paddingTop="20dp"
-                    android:contentDescription="@null" />
+                    android:isIndicator="false"
+                    android:layout_marginTop="@dimen/ratingbar_margin_top" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:paddingLeft="12dp">
-
-                    <TextView
-                        android:id="@+id/detail_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:paddingTop="30dp"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="20sp"
-                        android:textStyle="bold"/>
-
-                    <TextView
-                        android:id="@+id/detail_genres"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="10dp"
-                        android:paddingRight="5dp"/>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center_vertical"
-                        android:paddingTop="10dp">
-
-                        <RatingBar
-                            android:id="@+id/rating_bar"
-                            style="?android:attr/ratingBarStyleSmall"
-                            android:numStars="5"
-                            android:stepSize="0.1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:isIndicator="false"
-                            android:layout_marginTop="2dp" />
-
-                        <TextView
-                            android:id="@+id/detail_rating"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:paddingLeft="5dp"
-                            android:textColor="#999"/>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:paddingTop="10dp">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/runtime"
-                            android:paddingRight="5dp"
-                            android:textColor="#999"/>
-
-                        <TextView
-                            android:id="@+id/detail_runtime"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
-
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/detail_date"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="10dp"/>
-
-                </LinearLayout>
+                <TextView
+                    android:id="@+id/detail_rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="@dimen/rating_detail_padding_left"
+                    android:textColor="@color/colorTextGray"/>
 
             </LinearLayout>
 
-    <LinearLayout
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingBottom="20dp">
+                android:orientation="horizontal"
+                android:paddingTop="@dimen/runtime_linearlayout_padding_top">
 
                 <TextView
-                    android:id="@+id/detail_plot"
-                    android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
-                    android:padding="12dp" />
-
-                <LinearLayout
-                    android:id="@+id/trailers_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:visibility="gone"
-                    android:orientation="vertical"
-                    android:paddingBottom="20dp"
-                    android:paddingTop="10dp">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/background" />
-
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/detail_trailers"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="#222" />
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/background" />
-
-                </LinearLayout>
+                    android:text="@string/runtime"
+                    android:paddingRight="@dimen/runtime_padding_right"
+                    android:textColor="@color/colorTextGray"/>
 
                 <TextView
-                    android:id="@+id/detail_reviews_title"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/detail_runtime"
                     android:layout_width="match_parent"
-                    android:textSize="20sp"
-                    android:text="@string/reviews"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:paddingLeft="30dp"
-                    android:background="#f5f5f5"
-                    android:textColor="@color/colorAccent"/>
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/detail_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/detail_date_padding_top"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingBottom="20dp">
+
+        <TextView
+            android:id="@+id/detail_plot"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:padding="12dp" />
+
+        <LinearLayout
+            android:id="@+id/trailers_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:orientation="vertical"
+            android:paddingBottom="20dp"
+            android:paddingTop="10dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/detail_trailers"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorBackgroundTrailers" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/detail_reviews_title"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:textSize="@dimen/text_sz_reviews_title"
+            android:text="@string/reviews"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="30dp"
+            android:textColor="@color/colorAccent"/>
+
+    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
