--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,7 @@
     <color name="colorPrimary">#222</color>
     <color name="colorPrimaryDark">#121212</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorBackgroundDetail">#f5f5f5</color>
+    <color name="colorTextGray">#999</color>
+    <color name="colorBackgroundTrailers">#222</color>
 </resources>
