--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -74,7 +74,7 @@
                     android:stepSize="0.1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:isIndicator="false"
+                    android:isIndicator="true"
                     android:layout_marginTop="@dimen/ratingbar_margin_top" />
 
                 <TextView
