--- a/app/src/main/res/layout-sw600dp/activity_movie_list.xml
+++ b/app/src/main/res/layout-sw600dp/activity_movie_list.xml
@@ -72,11 +72,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
 
-            <fragment
-                android:id="@+id/detail_fragment"
+            <FrameLayout
+                android:id="@+id/detail_fragment_framelayout"
                 android:name="com.example.julia.popularmovies.details.DetailFragment"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1" />
 
         </android.support.v4.widget.NestedScrollView>
